# sqpt_demo_000XXXX3

./: README.md  pyproject.toml  sonar-project.properties
app/: main.py
tests/api/: test_endpoints.py
tests/unit/: test_calculator.py
